infra/k8s/event-bus-depl.yaml
#depl --> deployment..

apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template: 
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
      - name: event-bus
        image: isha7876/event-bus:latest #if we dont put the latest docker assumes ( by default) latest
        # ports:
        # - containerPort: 8080

---

#for cluster Ip address.
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 6005
      targetPort: 4005
