infra/k8s/posts-depl.yaml
#depl --> deployment..

apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template: 
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        image: isha7876/posts:latest #if we dont put the latest docker assumes ( by default) latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
  - name: posts
    protocol: TCP
    port: 6000
    targetPort: 3001
  type: ClusterIP
