infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 6000   #the port on which ui which contact to and then this will redirect it to the targeted port
      targetPort: 3001  #the port on which the node application is running.
